--- a/classes/week_6/basic_similarity-Copy1.ipynb
+++ b/classes/week_6/basic_similarity-Copy1.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'is'}\n"
+      "{'Jones', 'musician', 'George', 'is', 'a'}\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
     "\n",
     "\n",
     "a = set(str1.split()) \n",
-    "b = set(str3.split())\n",
+    "b = set(str4.split())\n",
     "c = a.intersection(b)\n",
     "\n",
     "print(c)"
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1111111111111111\n"
+      "0.7142857142857143\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "{'George', 'Jones', 'a', 'is', 'musician', 'noted'}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "{'George', 'Jones', 'a', 'is', 'musician', 'noted', 'talented'}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,16 +149,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Jones', 'noted', 'talented', 'George', 'is', 'a', 'musician']\n"
+     ]
+    }
+   ],
    "source": [
-    "reference = list(total)"
+    "reference = list(total)\n",
+    "print(reference)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,17 +183,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 0, 1, 1, 1, 1]\n",
+      "[1, 0, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "v1 = vectorize(list(a))\n",
-    "v2 = vectorize(list(b))"
+    "v2 = vectorize(list(b))\n",
+    "print(v1)\n",
+    "print(v2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
