--- a/classes/week_5/basic_semantics.ipynb
+++ b/classes/week_5/basic_semantics.ipynb
@@ -9,24 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'b2', 'b1', 'd1', 'g1', 'g2'}\n",
-      "Domain = {'b2', 'b1', 'd1', 'g1', 'g2'},\n",
+      "{'d1', 'b2', 'g2', 'b1', 'g1'}\n",
+      "Domain = {'d1', 'b2', 'g2', 'b1', 'g1'},\n",
       "Valuation = \n",
       "{'adam': 'b1',\n",
       " 'betty': 'g1',\n",
-      " 'boy': {('b2',), ('b1',)},\n",
+      " 'boy': {('b1',), ('b2',)},\n",
       " 'dog': {('d1',)},\n",
       " 'fido': 'd1',\n",
-      " 'girl': {('g2',), ('g1',)},\n",
-      " 'love': {('b2', 'g2'), ('g2', 'b1'), ('g1', 'b1'), ('b1', 'g1')},\n",
-      " 'walk': {('b1',), ('g1',)}}\n"
+      " 'girl': {('g1',), ('g2',)},\n",
+      " 'love': {('b1', 'g1'), ('b2', 'g2'), ('g2', 'b1'), ('g1', 'b1')},\n",
+      " 'walk': {('g1',), ('b1',)}}\n"
      ]
     }
    ],
@@ -47,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -87,7 +87,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package sample_grammars to\n",
+      "[nltk_data]     /Users/kristinlevine/nltk_data...\n",
+      "[nltk_data]   Unzipping grammars/sample_grammars.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('sample_grammars')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
