--- a/classes/week_6/basic_extraction-Copy1.ipynb
+++ b/classes/week_6/basic_extraction-Copy1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,24 +234,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('European', 'NORP'),\n",
-      " ('Google', 'ORG'),\n",
-      " ('$5.1 billion', 'MONEY'),\n",
-      " ('Wednesday', 'DATE')]\n"
+      "[('European', 'NORP'), ('Google', 'ORG'), ('$5.1 billion', 'MONEY'), ('Wednesday', 'DATE')]\n"
      ]
     }
    ],
    "source": [
     "doc = nlp('European authorities fined Google a record $5.1 billion on Wednesday for abusing its power in the mobile phone market and ordered the company to alter its practices')\n",
     "#doc = nlp('John James went to the store.')\n",
-    "pprint([(X.text, X.label_) for X in doc.ents])# if X.label_ == \"PERSON\"])"
+    "print([(X.text, X.label_) for X in doc.ents])# if X.label_ == \"PERSON\"])"
    ]
   },
   {
@@ -273,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -379,6 +376,32 @@
     "The case revolved around a number of design and utility patents for basic functions of a smartphone, like tap to zoom and the home screen app grid. But while the fight was hashed out using specific patents, the battle was ultimately about whether Samsung copied Apple in the early days of smartphones to gain an edge. The jury decided that, in many ways, it had.\n",
     "\"\"\"\n",
     "displacy.render(nlp(str(sentence1)), jupyter=True, style='ent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc2 = nlp(str(sentence1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Apple, Samsung, Samsung, iPhone, today, Lucy Koh, two, 2011, $1 billion, Apple, the Supreme Court, Samsung, Apple, Samsung, Apple, the early days)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(doc2.ents)"
    ]
   },
   {
